--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 </ul>
             </nav>
         </header>
+
+        <main class="contentinicio">
+            <img src="images/barberiafundo.jpg" alt="barbearia" class="imgdefundo">
+        </main>
         <script src="script.js"></script>
     </div>
 </body>
