--- a/sobre.html
+++ b/sobre.html
@@ -40,13 +40,22 @@
             <H2 class="subh2">SOBRE NÓS</H2>
 
             <h3>O que nós somos?</h3>
-            <p class="paragrafo-about">Somos os Bárbaros barber quasi veritatis iusto quidem ipsum distinctio deserunt tempora?</p>
-            <br> <br> <br>
+            <p class="paragrafo-about">Somos uma barbearia extremante capacitada em atender os propósitos dos clientes.</p>
+            <br> <br> 
 
-            <p class="paragrafo-about">Somos uma barbearia muito bem preparada para atender os desejos dos clientes.em, modi, veniam pariatur accusantium iure dicta beatae ipsa doloribus laudantium tempora.</p>
-            <br> <br> <br>
+            <h3>Aqui barba, cabelo e bigodes, são coisas sérias!</h3>
+            <p class="paragrafo-about">Trabalhe com profissionais habilidosos</p>
+            <br>
+            <h3>O que temos a oferecer?</h3>
+            <p class="paragrafo-about">Está precisando dar aquele trato completo no visual? Aqui você faz barba, cabelo, bigode, toma uma cerveja gelada, joga Video game e ainda bate aquela resenha com a galera.</p>
 
-            <p class="paragrafo-about">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, fugiat voluptatibus soluta totam odit repellendus sequi ex cumque placeat nulla vitae provident corporis necessitatibus sint reprehenderit blanditiis quasi ad vero?</p>
+            <p class="paragrafo-about">Aqui é barba, cabelo e bigode! Venha dar aquele tapa no visual e tomar aquela cervejinha gelada conversando com os amigos.</p>
+            <br> <br> 
+
+            <h3>Venha conhecer a melhor barbearia do RJ!</h3>
+            <p class="paragrafo-about">O homem moderno também cuida da sua aparência e a nossa barbearia é o melhor lugar para fazer isso! </p>
+
+            <p class="paragrafo-about">Venha conhecer nossos barbeiros e descubra uma nova barba, um novo mundo! Consulte nossos horários de atendimento e marque uma hora com a gente.</p>
         </section>
         <script src="script.js"></script>
     </div>
