atualizei as imagens  e um pouco do html

--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -41,19 +42,17 @@
 
             <h3>O que nós somos?</h3>
             <p class="paragrafo-about">Somos uma barbearia extremante capacitada em atender os propósitos dos clientes.</p>
-            <br> <br> 
+            <br> 
 
             <h3>Aqui barba, cabelo e bigodes, são coisas sérias!</h3>
             <p class="paragrafo-about">Trabalhe com profissionais habilidosos</p>
             <br>
             <h3>O que temos a oferecer?</h3>
-            <p class="paragrafo-about">Está precisando dar aquele trato completo no visual? Aqui você faz barba, cabelo, bigode, toma uma cerveja gelada, joga Video game e ainda bate aquela resenha com a galera.</p>
-
-            <p class="paragrafo-about">Aqui é barba, cabelo e bigode! Venha dar aquele tapa no visual e tomar aquela cervejinha gelada conversando com os amigos.</p>
-            <br> <br> 
+            <p class="paragrafo-about">Aqui é barba,cabelo e bigode. Está precisando dar aquele trato completo no visual? Aqui você faz barba, cabelo, bigode,toma uma cerveja gelada, joga Video game e ainda bate aquela resenha com a galera.</p>
+            <br>
 
             <h3>Venha conhecer a melhor barbearia do RJ!</h3>
-            <p class="paragrafo-about">O homem moderno também cuida da sua aparência e a nossa barbearia é o melhor lugar para fazer isso! </p>
+            <p class="paragrafo-about">O homem moderno também cuida da sua aparência e a nossa barbearia é o melhor lugar para fazer isso!</p>
 
             <p class="paragrafo-about">Venha conhecer nossos barbeiros e descubra uma nova barba, um novo mundo! Consulte nossos horários de atendimento e marque uma hora com a gente.</p>
         </section>
