--- a/contato.html
+++ b/contato.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
-    <div class="container">
+    <div class="contact-container">
         <header>
             <div class="logo">
                   <h1>BÁRBAROS</h1>
@@ -38,56 +39,60 @@
 
         <section class="contact">
             <h2 class="subh2">ENTRE EM CONTATO</h2>
-            <ul>
-                <img src="images/pin.png" alt="location" class="contactimg">
-                <li class="listcontact">Estr. do Dendê, 1626 - Loja B - Moneró, <br> Rio de Janeiro - RJ, 21920-001</li> <br>
-
-                <img src="images/telefone (1).png" alt="tel" class="contactimg">
-                <li class="listcontact"> Telefone : (21) 965471728</li> <br>
-
-                <img src="images/gmaillogo.png" alt="gmail" class="contactimg">
-                <a href="mailto:junnioralves27@gmail.com" class="email">
-                    <li class="listcontact">junnioralves27@gmail.com</li> <br>
+            <ul lista-contact>
+                
+                <a href="#" class="whatsapp">
+                    <img src="images/Maps-Pin-Place-icon.png" alt="icone de localização" class="contactimg">
+                        <li>Estr. do Dendê, 1626 - Loja B - Moneró, Rio de Janeiro - RJ, 21920-001</li> <br>
+                    </img>
                 </a>
 
-                <img src="images/relogio.png" alt="horario" class="contactimg">
-                <li class="listcontact">HORÁRIOS:</li>
+                <a href="https://api.whatsapp.com/send?phone=5521971999922&text=Ol%C3%A1+B%C3%A1rbaro+Junior%2C+gostaria+de+agendar+um+hor%C3%A1rio+e+garantir+o+meu+corte+%F0%9F%91%8A" class="whatsapp" target="_blank">
+                    <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
+                        <li class="listcontact">Bárbaro Junnior</li>
+                    </img> <br>
+                </a>
 
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Terça</th>
-                            <th>Quarta</th>
-                            <th>Quinta</th>
-                            <th>Sexta</th>
-                            <th>Sábado</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>10:30-19:00</td>
-                            <td>10:30-19:00</td>
-                            <td>10:30-19:00</td>
-                            <td>10:30-19:00</td>
-                            <td>10:00-16:00</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <a href="https://api.whatsapp.com/send?phone=5521981508023&text=Ol%C3%A1+B%C3%A1rbaro+Bruno%2C+gostaria+de+agendar+um+hor%C3%A1rio+e+garantir+o+meu+corte+%F0%9F%91%8A" class="whatsapp" target="_blank">
+                    <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
+                        <li class="listcontact">Bárbaro Bruno</li>
+                    </img> <br>
+                </a>
+
+                <a href="https://api.whatsapp.com/send/?phone=5521980123381&text&app_absent=0" class="whatsapp" target="_blank">
+                    <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
+                        <li class="listcontact">Bárbaro Rafael</li>
+                    </img> <br>
+                </a>
+
+                <a href="#" class="whatsapp">
+                    <img src="images/relogio.png" alt="relogio" class="contactimg">
+                        <li>HORÁRIOS:</li>
+                    </img>
+                </a>
             </ul>
 
-            <div class="creditos">
-                <p>IMAGES RETIRIDAS DOS SITE ABAIXOS:</p>
-                <a target="_blank" href="https://icons8.com/icon/42032/login-no-gmail" class="linkcreditos">Login no Gmail</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-
-                <p>
-                    <a href="https://www.flaticon.com/br/icones-gratis/localizacao" title="localização ícones" class="linkcreditos">Localização ícones criados por inkubators - Flaticon</a> <br>
-
-                    <a href="https://www.flaticon.com/br/icones-gratis/telefone" title="telefone ícones" class="linkcreditos">Telefone ícones criados por Good Ware - Flaticon</a> <BR>
-
-                    <a href="https://www.flaticon.com/br/icones-gratis/relogio" title="relógio ícones" class="linkcreditos">Relógio ícones criados por Uniconlabs - Flaticon</a>  <br>
-
-                    <a href="https://www.flaticon.com/br/icones-gratis/telefone" title="telefone ícones">Telefone ícones criados por Pixel perfect - Flaticon</a>
-                </p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Terça</th>
+                        <th>Quarta</th>
+                        <th>Quinta</th>
+                        <th>Sexta</th>
+                        <th>Sábado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>10:30-19:00</td>
+                        <td>10:30-19:00</td>
+                        <td>10:30-19:00</td>
+                        <td>10:30-19:00</td>
+                        <td>10:00-16:00</td>
+                    </tr>
+                </tbody>
+            </table>
+                    
             </div>
         </section>
         <script src="script.js"></script>
