--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BÁRBAROS BARBER</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -38,6 +39,9 @@
 
         <main class="contentinicio">
             <img src="images/barberiafundo.jpg" alt="barbearia" class="imgdefundo">
+            <p class="description">Ambiente agradável,com diversão e um corte maravilhso.</p>
+            <p>© 2022 por Bárbaros Barber. </p>
+            <a href="contato.html"><img src="images/whatsicon.webp" alt="whatsapp"></a>
         </main>
         <script src="script.js"></script>
     </div>
