--- a/preços.html
+++ b/preços.html
@@ -42,10 +42,25 @@
             <h2 class="subh2">Nossos Preços</h2>
 
             <article>
-                <p class="paragrafo-art">Corte=50R$</p>
-                <p class="paragrafo-art">Barba=40R$</p>
-                <p class="paragrafo-art">Corte + Barba=90R$</p>
-                <p></p>
+                <div class="logoart"><img src="images/logo.png" alt="logo" class="logoimg"></div>
+
+                <p class="paragrafo-art">Corte<span class="precos">R$50,00</span></p>
+
+                <p class="paragrafo-art">Barba<span class="precos">R$40,00</span></p>
+
+                <p class="paragrafo-art">Cabelo + Barba<span class="precos">R$85,00</span></p>
+
+                <p class="paragrafo-art">Sobrancelhas Navalha<span class="precos">R$20,00</span></p>
+
+                <p class="paragrafo-art">Sobrancelhas Pinça<span class="precos">R$25,00</span></p>
+
+                <p class="paragrafo-art">Relaxamento<span class="precos">R$55,00</span></p>
+
+                <p class="paragrafo-art">Pigmentação de Barba<span class="precos">R$25,00</span></p>
+
+                <p class="paragrafo-art">Tintura de Cabelo<span class="precos">R$30,00</span></p>
+                
+                <p class="paragrafo-art">Platinados a Partir de<span class="precos">R$180,00</span></p>
             </article>
         </section>
 
