dei um display none nos menus

--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
             </div>
             <nav id="nav">
                 <button id="btn-mobile" aria-label="Abrir menu" aria-haspopup="true" aria-controls="menu"
-                    aria-expanded="false">Menu
+                    aria-expanded="false"><span class="none">Menu</span>
 
                     <span id="hamburguer"></span>
                 </button>
