--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
                   <H1>BARBER</H1>
             </div>
             <nav id="nav">
-                <button id="btn-mobile" aria-label="Abrir menu" aria-haspopup="true" aria-controls="menu"  aria-expanded="false">Menu
+                <button id="btn-mobile" aria-label="Abrir menu" aria-haspopup="true" aria-controls="menu"  aria-expanded="false"><span class="none">Menu</span>
 
                     <span id="hamburguer"></span>
                 </button>
