Atualizei a responsividade e os preços

--- a/contato.html
+++ b/contato.html
@@ -98,9 +98,14 @@
                     </tbody>
                 </table>
                 
+
+                <p class="horarios-mobile">terça-sexta: <br> 10:30-19:00 <br>
+                </p>
+                <p class="horarios-mobile">Sábado: <br> 10:00-16:00</p>
             </ul>
         </section>
     </div>
+
     <script src="script.js"></script>
 
 </body>
