--- a/preços.html
+++ b/preços.html
@@ -42,7 +42,7 @@
             <h2 class="subh2">Nossos Preços</h2>
 
             <article>
-                <div class="logoart"><img src="images/logo.png" alt="logo" class="logoimg"></div>
+                <div class="logoart"><img src="images/logo.png" alt="logo" class="logoimg"> <h4>BÁRBAROS BARBER</h4></div>
 
                 <p class="paragrafo-art">Corte<span class="precos">R$50,00</span></p>
 
@@ -62,6 +62,10 @@
                 
                 <p class="paragrafo-art">Platinados a Partir de<span class="precos">R$180,00</span></p>
             </article>
+        </section>
+
+        <section class="metodo-de-pagamento">
+            <H3>Aceitamos PIX,DINHEIRO E CARTÃO</H3>
         </section>
 
         <script src="script.js"></script>
