--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
-    <div class="container">
+    <div class="container-about">
         <header>
             <div class="logo">
                   <h1>BÁRBAROS</h1>
@@ -40,11 +40,7 @@
         <section class="about">
             <H2 class="subh2">SOBRE NÓS</H2>
 
-            <h3>O que nós somos?</h3>
-            <p class="paragrafo-about">Somos uma barbearia extremante capacitada em atender os propósitos dos clientes.</p>
-            <br> 
-
-            <h3>Aqui barba, cabelo e bigodes, são coisas sérias!</h3>
+            <h3>Aqui barba,cabelo e bigodes, são coisas sérias!</h3>
             <p class="paragrafo-about">Trabalhe com profissionais habilidosos</p>
             <br>
             <h3>O que temos a oferecer?</h3>
