--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <main class="contentinicio">
             <img src="images/barberiafundo.jpg" alt="barbearia" class="imgdefundo">
-            <p class="description">Ambiente agradável,com diversão e um corte maravilhso.</p>
+            <p class="description">Barbearia agradável,com diversão e um corte maravilhso.</p>
             <p>© 2022 por Bárbaros Barber. </p>
             <a href="contato.html"><img src="images/whatsicon.webp" alt="whatsapp"></a>
         </main>
