coloquei iamgens na galeria

--- a/contato.html
+++ b/contato.html
@@ -36,6 +36,9 @@
                     <a href="preços.html" class="linknav">
                         <li>Preços</li>
                     </a>
+                    <a href="galeria.html" class="linknav">
+                        <li>Galeria</li>
+                    </a>
                 </ul>
             </nav>
         </header>
