--- a/galeria.html
+++ b/galeria.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cortes</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="cortes-container">
@@ -31,12 +33,27 @@
                     <a href="preços.html" class="linknav">
                         <li>Preços</li>
                     </a>
-                    <a href="galeria.html">
+                    <a href="galeria.html" class="linknav">
                         <li>Galeria</li>
                     </a>
                 </ul>
             </nav>
         </header>
+        
+
+        <section class="card-img">
+            <div class="imagens-corte">
+                <img src="images/corte.jpg" alt="corte" class="img-card">
+                <img src="images/corte2.jpg" alt="corte" class="img-card">
+                <img src="images/corte3.jpg" alt="corte" class="img-card">
+                <img src="images/corte4.jpg" alt="corte" class="img-card">
+                <img src="images/corte5.jpg" alt="corte" class="img-card">
+                <img src="images/corte6.jpg" alt="corte" class="img-card">
+                <img src="images/corte7.jpg" alt="corte" class="img-card">
+                <img src="images/corte8.jpg" alt="corte" class="img-card">
+                <img src="images/corte9.jpg" alt="corte" class="img-card">
+            </div> 
+        </section>
     </div>
 </body>
 </html>
