--- a/sobre.html
+++ b/sobre.html
@@ -33,6 +33,9 @@
                     <a href="preços.html" class="linknav">
                         <li>Preços</li>
                     </a>
+                    <a href="galeria.html" class="linknav">
+                        <li>Galeria</li>
+                    </a>
                 </ul>
             </nav>
         </header>
