--- a/galeria.html
+++ b/galeria.html
@@ -54,6 +54,8 @@
                 <img src="images/corte9.jpg" alt="corte" class="img-card">
             </div> 
         </section>
+
+        <script src="script.js"></script>
     </div>
 </body>
 </html>
