update css preços

--- a/preços.html
+++ b/preços.html
@@ -42,7 +42,7 @@
 
         <section id="custo">
 
-            <h2 class="subh2">Nossos Preços</h2>
+            <h2 class="subh2  center" >Nossos Preços</h2>
 
             <article>
                 <div class="logoart"><img src="images/logo.png" alt="logo" class="logoimg"> <h4>BÁRBAROS BARBER</h4></div>
