arrumei bug dos preços

--- a/preços.html
+++ b/preços.html
@@ -68,7 +68,7 @@
         </section>
 
         <section class="metodo-de-pagamento">
-            <H3>Aceitamos PIX,DINHEIRO E CARTÃO</H3>
+            <H3><span class="acept">Aceitamos:</span> PIX,DINHEIRO E CARTÃO</H3>
         </section>
 
         <script src="script.js"></script>
