--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             <p>© 2022 por Bárbaros Barber. </p>
             <a href="contato.html"><img src="images/whatsicon.webp" alt="whatsapp"></a>
         </main>
+
+        <section id="localizacao">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14712.726036425523!2d-43.1969701!3d-22.7957373!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc97d0d7bde2bd78d!2sB%C3%81RBAROS%20BARBER!5e0!3m2!1spt-BR!2sbr!4v1654443543741!5m2!1spt-BR!2sbr"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
         <script src="script.js"></script>
     </div>
 </body>
