--- a/sobre.html
+++ b/sobre.html
@@ -53,7 +53,10 @@
             <h3>Venha conhecer a melhor barbearia do RJ!</h3>
             <p class="paragrafo-about">O homem moderno também cuida da sua aparência e a nossa barbearia é o melhor lugar para fazer isso!</p>
 
-            <p class="paragrafo-about">Venha conhecer nossos barbeiros e descubra uma nova barba, um novo mundo! Consulte nossos horários de atendimento e marque uma hora com a gente.</p>
+            <p class="paragrafo-about">Venha conhecer nossos barbeiros e descubra uma nova barba, um novo mundo! Consulte nossos horários de atendimento e marque uma hora com a gente.</p> <br>
+            <div class="move move-about">
+                <a href="contato.html" class="agenda">Agende um Horário</a>
+            </div>
         </section>
         <script src="script.js"></script>
     </div>
