att contato e images de fundo

--- a/contato.html
+++ b/contato.html
@@ -47,32 +47,37 @@
             <h2 class="subh2">ENTRE EM CONTATO</h2>
             <ul class="lista-contact">
 
-                <a href="#" class="whatsapp">
-                    <img src="images/Maps-Pin-Place-icon.png" alt="icone de localização" class="contactimg">
-                    <li>Estr. do Dendê, 1626 - Loja B - Moneró, Rio de Janeiro - RJ, 21920-001</li> <br>
-                    </img>
-                </a>
+                <li class="li-contact li-maps">
+                    <a href="https://www.google.com/maps/place/B%C3%81RBAROS+BARBER/@-22.7957373,-43.1969701,15z/data=!4m5!3m4!1s0x0:0xc97d0d7bde2bd78d!8m2!3d-22.7957373!4d-43.1969701" class="whatsapp">
+                        <img src="images/Maps-Pin-Place-icon.png" alt="icone de localização" class="contactimg">
+                       </img>
+                    </a>
+                        Estr. do Dendê, 1626 - Loja B - Moneró, Rio de Janeiro - RJ, 21920-001
+                </li>
 
-                <a href="https://api.whatsapp.com/send?phone=5521971999922&text=Ol%C3%A1+B%C3%A1rbaro+Junior%2C+gostaria+de+agendar+um+hor%C3%A1rio+e+garantir+o+meu+corte+%F0%9F%91%8A"
-                    class="whatsapp" target="_blank">
-                    <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
-                    <li class="listcontact">Bárbaro Junnior</li>
-                    </img> <br>
-                </a>
+                <li class="li-contact">
+                    <a href="https://api.whatsapp.com/send?phone=5521971999922&text=Ol%C3%A1+B%C3%A1rbaro+Junior%2C+gostaria+de+agendar+um+hor%C3%A1rio+e+garantir+o+meu+corte+%F0%9F%91%8A" class="whatsapp" target="_blank">
+                        <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
+                    </a>
 
-                <a href="https://api.whatsapp.com/send?phone=5521981508023&text=Ol%C3%A1+B%C3%A1rbaro+Bruno%2C+gostaria+de+agendar+um+hor%C3%A1rio+e+garantir+o+meu+corte+%F0%9F%91%8A"
-                    class="whatsapp" target="_blank">
-                    <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
-                    <li class="listcontact">Bárbaro Bruno</li>
-                    </img> <br>
-                </a>
+                    <a href="https://www.instagram.com/junnioralves27/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.crdownload" alt="logo instagram" class="contactimg"></a>
+                    <span class="listcontact">Bárbaro Junnior</span>
+                </li>
+                
+                <li class="li-contact">
+                    <a href="https://api.whatsapp.com/send?phone=5521981508023&text=Ol%C3%A1+B%C3%A1rbaro+Bruno%2C+gostaria+de+agendar+um+hor%C3%A1rio+e+garantir+o+meu+corte+%F0%9F%91%8A" class="whatsapp" target="_blank"><img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg"></a>
 
-                <a href="https://api.whatsapp.com/send/?phone=5521980123381&text&app_absent=0" class="whatsapp"
-                    target="_blank">
-                    <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
-                    <li class="listcontact">Bárbaro Rafael</li>
-                    </img> <br>
-                </a>
+                    <a href="https://www.instagram.com/brunoesron/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.crdownload" alt="logo instagram" class="contactimg"></a>
+                    <span class="listcontact">Bárbaro Bruno</span>
+                </li>
+
+                <li class="li-contact">
+                        <a href="https://api.whatsapp.com/send/?phone=5521980123381&text&app_absent=0" class="whatsapp" target="_blank"><img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg"></img></a>
+
+                        <a href="https://www.instagram.com/rafaelbozobarbeiro/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.crdownload" alt="logo instagram" class="contactimg"></a>
+                    <span class="listcontact">Bárbaro Rafael</span>
+                </li>
+                
 
                 <a href="#" class="whatsapp">
                     <img src="images/relogio.png" alt="relogio" class="contactimg">
