--- a/contato.html
+++ b/contato.html
@@ -60,21 +60,21 @@
                         <img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg">
                     </a>
 
-                    <a href="https://www.instagram.com/junnioralves27/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.crdownload" alt="logo instagram" class="contactimg"></a>
+                    <a href="https://www.instagram.com/junnioralves27/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.png" alt="logo instagram" class="contactimg"></a>
                     <span class="listcontact">Bárbaro Junnior</span>
                 </li>
                 
                 <li class="li-contact">
                     <a href="https://api.whatsapp.com/send?phone=5521981508023&text=Ol%C3%A1+B%C3%A1rbaro+Bruno%2C+gostaria+de+agendar+um+hor%C3%A1rio+e+garantir+o+meu+corte+%F0%9F%91%8A" class="whatsapp" target="_blank"><img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg"></a>
 
-                    <a href="https://www.instagram.com/brunoesron/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.crdownload" alt="logo instagram" class="contactimg"></a>
+                    <a href="https://www.instagram.com/brunoesron/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.png" alt="logo instagram" class="contactimg"></a>
                     <span class="listcontact">Bárbaro Bruno</span>
                 </li>
 
                 <li class="li-contact">
                         <a href="https://api.whatsapp.com/send/?phone=5521980123381&text&app_absent=0" class="whatsapp" target="_blank"><img src="images/Whatsapp-icon.png" alt="whatsapp link" class="contactimg"></img></a>
 
-                        <a href="https://www.instagram.com/rafaelbozobarbeiro/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.crdownload" alt="logo instagram" class="contactimg"></a>
+                        <a href="https://www.instagram.com/rafaelbozobarbeiro/" class="whatsapp" target="_blank"><img src="images/logo-instagram-png-fundo-transparente.png.png" alt="logo instagram" class="contactimg"></a>
                     <span class="listcontact">Bárbaro Rafael</span>
                 </li>
                 
