--- a/sobre.html
+++ b/sobre.html
@@ -41,7 +41,7 @@
         </header>
 
         <section class="about">
-            <H2 class="h2-about">SOBRE NÓS</H2>
+            <H2 class=" subh2">SOBRE NÓS</H2>
 
             <h3>Aqui barba,cabelo e bigodes, são coisas sérias!</h3>
             <p class="paragrafo-about">Trabalhe com profissionais habilidosos</p>
