--- a/preços.html
+++ b/preços.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
-    <div class="container">
+    <div class="container-preco">
         <header>
             <div class="logo">
                   <h1>BÁRBAROS</h1>
