att entre em contato coloquei um display flex no li-maps

--- a/contato.html
+++ b/contato.html
@@ -47,12 +47,14 @@
             <h2 class="subh2">ENTRE EM CONTATO</h2>
             <ul class="lista-contact">
 
-                <li class="li-contact li-maps">
-                    <a href="https://www.google.com/maps/place/B%C3%81RBAROS+BARBER/@-22.7957373,-43.1969701,15z/data=!4m5!3m4!1s0x0:0xc97d0d7bde2bd78d!8m2!3d-22.7957373!4d-43.1969701" class="whatsapp">
+                <li class="li-maps">
+                    <a href="https://www.google.com/maps/place/B%C3%81RBAROS+BARBER/@-22.7957373,-43.1969701,15z/data=!4m5!3m4!1s0x0:0xc97d0d7bde2bd78d!8m2!3d-22.7957373!4d-43.1969701" class="whatsapp" target="_blank">
                         <img src="images/Maps-Pin-Place-icon.png" alt="icone de localização" class="contactimg">
                        </img>
                     </a>
-                        Estr. do Dendê, 1626 - Loja B - Moneró, Rio de Janeiro - RJ, 21920-001
+
+                    <a href="https://www.google.com/maps/place/B%C3%81RBAROS+BARBER/@-22.7957373,-43.1969701,15z/data=!4m5!3m4!1s0x0:0xc97d0d7bde2bd78d!8m2!3d-22.7957373!4d-43.1969701" class="whatsapp" target="_blank">Estr. do Dendê, 1626 - Loja B - Moneró, Rio de Janeiro - RJ, 21920-001</a>
+                        
                 </li>
 
                 <li class="li-contact">
