--- a/sobre.html
+++ b/sobre.html
@@ -45,8 +45,11 @@
             
 
             <h3>Aqui barba,cabelo e bigodes, são coisas sérias!</h3>
-            <p class="paragrafo-about">Trabalhe com profissionais habilidosos</p>
+            <p class="paragrafo-about">Trabalhe com os melhores profissionais
+                que estão atuando nessa área há anos.
+            </p>
             <br>
+            
             <h3>O que temos a oferecer?</h3>
             <p class="paragrafo-about">Aqui é barba,cabelo e bigode. Está precisando dar aquele trato completo no visual? Aqui você faz barba,cabelo, bigode,toma uma cerveja gelada, joga Video game e ainda bate aquela resenha com a galera.</p>
             <br>
