--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <p class="description">Barbearia agradável,com diversão e um corte maravilhso.</p>
             <p>© 2022 por Bárbaros Barber. </p>
             <a href="contato.html"><img src="images/whatsicon.webp" alt="whatsapp"></a>
+
+            <div>Barberia </div>
         </main>
 
         <div class="move">
